--- a/08-prosojnice/prosojnice.tex
+++ b/08-prosojnice/prosojnice.tex
@@ -8,19 +8,24 @@
 % Naloga 1.3.3: definirajte okolji `definicija' in `izrek'.
 % Namig: z iskanjem po datotekah (Ctrl+Shift+F oz. Cmd+Shift+F) 
 % poiščite niz `{definicija}' ali niz `{izrek}'.
-\begin{document}
-{\theoremstyle{definition}
-\newtheorem{definicija}{izrek}{Definicija}
-}
+
 {\theoremstyle{plain}
 \newtheorem{izrek}{Izrek}[section]
 \newtheorem{posledica}[izrek]{Posledica}
 }
+{\theoremstyle{definition}
+\newtheorem{definicija}[izrek]{Definicija}
+}
+\begin{document}
+
 \title{Matematični izrazi in uporaba paketa \texttt{beamer}}
 \subtitle{\emph{Matematičnih} nalog ni treba reševati!}
 \institute{Fakulteta za matematiko in fiziko}
 \date{}
 
+\begin{frame}
+    \titlepage
+\end{frame}
 
 
 
@@ -35,9 +40,11 @@
 % https://www.overleaf.com/learn/latex/Beamer
 % To stran preberite do vključno razdelka "Creating a table of contents".
 % Ukaz `\titlepage` deluje podobno kot ukaz `\maketitle`, ki ste ga že srečali.
-\title{Kratek pregled}
-\tableofcontents %\pausesections
-\newpage
+
+\begin{frame}{Kratek pregled}
+    \tableofcontents %[pausesections]
+    
+\end{frame}
 
 % Naloga 1.3.5: pripravite kazalo vsebine.
 % 1. Naslov prosojnice, s kazalom vsebine naj bo "Kratek pregled"
@@ -48,12 +55,12 @@
 
 \section{Paket \texttt{beamer}}
 \input{prosojnice/1-paket-beamer.tex} 
-\pause
 
 \section{Paketa \texttt{amsmath} in \texttt{amsfonts}}
+\input{prosojnice/2-paketa-amsmath-amsfonts.tex} 
 
 \section[Matematika, 1. del\\\large{Analiza, logika, množice}]{Matematika, 1. del}
-
+\input{prosojnice/3-analiza-logika-mnozice.tex}
 \section{Stolpci in slike}
 
 \section{Paket \texttt{beamer} in tabele}
