--- a/08-prosojnice/prosojnice/1-paket-beamer.tex
+++ b/08-prosojnice/prosojnice/1-paket-beamer.tex
@@ -3,14 +3,15 @@
 	% Naloga 2.3.1:
 	% Dodajte ukaze, ki bodo poskrbeli, da se bo prosojnica odkrivala postopoma,
 	% tako kot v datoteki prosojnice-resitev.pdf
+	\pause
 
 	Za prosojnice je značilna uporaba okolja \texttt{frame},
 	s katerim definiramo posamezno prosojnico,
-	%
+	\pause
 	postopno odkrivanje prosojnic,
-	%
+	\pause
 	ter nekateri drugi ukazi, ki jih najdemo v paketu \texttt{beamer}.
-	%
+	\pause
 	\begin{exampleblock}{Primer}
 		Verjetno ste že opazili, da za naslovno prosojnico niste uporabili
 		ukaza \texttt{maketitle}, ampak ukaz \texttt{titlepage}.
@@ -20,12 +21,16 @@
 \begin{frame}{Poudarjeni bloki}
 	% Naloga 2.3.2:
 	% Oblikujte poudarjena bloka z opombo in opozorilom.
-
+	\begin{block}{Opomba}
 		Okolja za poudarjene bloke so \texttt{block}, \texttt{exampleblock} in \texttt{alertblock}.
 
+	\end{block}
+	
+	\begin{alertblock}{opozorilo}
 		Začetek poudarjenega bloka (ukaz \texttt{begin}) vedno sprejme 
 		dva parametra: okolje in naslov bloka.
 		Drugi parameter (za naslov) je lahko prazen. 
+	\end{alertblock}
 
 \end{frame}
 
@@ -42,8 +47,8 @@
 	   Denimo, da je praštevil končno mnogo.
 	   	% S pomožnim parametrom <+-> lahko določimo, da se bodo 
 		% elementi naštevanja odkrivali postopoma.
-	   \begin{itemize}[<+->]
-		  \item Naj bo $p$ \alert{največje} praštevilo.
+	   \begin{itemize}[<+->] 
+		  \item Naj bo $p$ \alert{največje}<4> praštevilo.
 		  \item Naj bo $q$ produkt števil $1$, $2$, \ldots, $p$.
 		  \item Število $q+1$ ni deljivo z nobenim praštevilom, torej je $q+1$ praštevilo.
 		  \item To je protislovje, saj je $q+1>p$. \qedhere
