--- a/08-prosojnice/prosojnice.tex
+++ b/08-prosojnice/prosojnice.tex
@@ -3,6 +3,8 @@
 % Naloga 1.3.1: Za dokument uporabite razred `beamer'.
 % Ne dodajajte nastavitve za velikost pisave, kot je bila v datoteki `5-prosojnice.tex`.
 \usepackage{predavanja}
+\usepackage{tikz}
+\usetikzlibrary{math}
 % Naloga 1.3.2: vključite paket `predavanja'.
 
 % Naloga 1.3.3: definirajte okolji `definicija' in `izrek'.
@@ -62,7 +64,7 @@
 \section[Matematika, 1. del\\\large{Analiza, logika, množice}]{Matematika, 1. del}
 \input{prosojnice/3-analiza-logika-mnozice.tex}
 \section{Stolpci in slike}
-
+\input{prosojnice/4-stolpci-slike.tex}
 \section{Paket \texttt{beamer} in tabele}
 
 \section[Matematika, 2. del\\\large{Zaporedja, algebra, grupe}]{Matematika, 2. del}
