--- a/08-prosojnice/prosojnice.tex
+++ b/08-prosojnice/prosojnice.tex
@@ -5,6 +5,12 @@
 \usepackage{predavanja}
 \usepackage{tikz}
 \usetikzlibrary{math}
+\usepackage{pgfplots}
+\usepgfplotslibrary{external}
+\usepackage{array}
+\newcommand{\ZZ}{\mathbb{Z}}
+\newcommand{\RR}{\mathbb{R}}
+\newcommand{\CC}{\mathbb{C}}
 % Naloga 1.3.2: vključite paket `predavanja'.
 
 % Naloga 1.3.3: definirajte okolji `definicija' in `izrek'.
@@ -66,7 +72,7 @@
 \section{Stolpci in slike}
 \input{prosojnice/4-stolpci-slike.tex}
 \section{Paket \texttt{beamer} in tabele}
-
+\input{prosojnice/5-beamer-tabele.tex}
 \section[Matematika, 2. del\\\large{Zaporedja, algebra, grupe}]{Matematika, 2. del}
-
+\input{prosojnice/6-zaporedja-algebra-grupe.tex}
 \end{document}
