--- a/08-prosojnice/prosojnice/4-stolpci-slike.tex
+++ b/08-prosojnice/prosojnice/4-stolpci-slike.tex
@@ -3,24 +3,24 @@
 	\begin{columns}
 		\column{0.55\textwidth}
 
-		  \begin{itemize}
-			 \item \pause Dani sta premica $p$ in točka $T$.
-			 \item \pause Nariši lok $k$ s središčem v $T$.
-			 \item \pause Premico $p$ seče v točkah $A$ in $B$.
-			 \item \pause Nariši lok $m$ s središčem v $A$.
-			 \item \pause Nariši lok $n$ s središčem v $B$ in z enakim polmerom.
-			 \item \pause Loka se sečeta v točki $C$.
-			 \item \pause Premica skozi točki $T$ in $C$ je pravokotna na $p$.
+		  \begin{itemize}[<+->]
+			 \item  {Dani sta premica $p$ in točka $T$.}
+			 \item  {Nariši lok $k$ s središčem v $T$.}
+			 \item  {Premico $p$ seče v točkah $A$ in $B$.}
+			 \item  {Nariši lok $m$ s središčem v $A$.}
+			 \item  {Nariši lok $n$ s središčem v $B$ in z enakim polmerom.}
+			 \item  {Loka se sečeta v točki $C$.}
+			 \item  {Premica skozi točki $T$ in $C$ je pravokotna na $p$.}
 		  \end{itemize}
 		\column{0.45\textwidth}
 		\centering
-		  \includegraphics[width=50mm]{slike/fig-1.png}
-		%   \includegraphics[width=50mm]{fig-2.png}%
-		%   \includegraphics[width=50mm]{fig-3.png}%
-		%   \includegraphics[width=50mm]{fig-4.png}%
-		%   \includegraphics[width=50mm]{fig-5.png}%
-		%   \includegraphics[width=50mm]{fig-6.png}%
-		%   \includegraphics[width=50mm]{fig-7.png}%
+		   \only<1>{\includegraphics[width=50mm]{slike/fig-1.png}}
+		   \only<2>{\includegraphics[width=50mm]{slike/fig-2.png}}
+		   \only<3>{\includegraphics[width=50mm]{slike/fig-3.png}}
+		   \only<4>{\includegraphics[width=50mm]{slike/fig-4.png}}
+		   \only<5>{\includegraphics[width=50mm]{slike/fig-5.png}}
+		   \only<6>{\includegraphics[width=50mm]{slike/fig-6.png}}
+		   \only<7>{\includegraphics[width=50mm]{slike/fig-7.png}}
 	\end{columns}	
 
 \end{frame}
@@ -94,16 +94,16 @@
 		\column{0.55\textwidth}
 
 		  \begin{itemize}
-			 \item \pause Dani sta premica $p$ in točka $T$.
-			 \item \pause Nariši lok $k$ s središčem v $T$.
-			 \item \pause Premico $p$ seče v točkah $A$ in $B$.
-			 \item \pause Nariši lok $m$ s središčem v $A$.
-			 \item \pause Nariši lok $n$ s središčem v $B$ in z enakim polmerom.
-			 \item \pause Loka se sečeta v točki $C$.
-			 \itm \pause Premica skozi točki $T$ in $C$ je pravokotna na $p$.
+			 \item \onslide<1-> {Dani sta premica $p$ in točka $T$.}
+			 \item \onslide<2-> {Nariši lok $k$ s središčem v $T$.}
+			 \item \onslide<3-> {Premico $p$ seče v točkah $A$ in $B$.}
+			 \item \onslide<4-> {Nariši lok $m$ s središčem v $A$.}
+			 \item \onslide<5-> {Nariši lok $n$ s središčem v $B$ in z enakim polmerom.}
+			 \item \onslide<6-> {Loka se sečeta v točki $C$.}
+			 \item \onslide<7-> {Premica skozi točki $T$ in $C$ je pravokotna na $p$.}
 		  \end{itemize}
 		\column{.45\textwidth}
-		\centerig
+		\centering
 		\begin{tikzpicture}
 		% Sliko mo naredili tako, da so točke A, B, T in C vse enako oddaljene
 				 % od presečišča premic; kot ATC je 45°.
@@ -132,7 +132,21 @@
 				 \coordinate [label=below left:{\scriptsize $A$}] (A) at ({-\t},0);
 				 \draw (A) circle (1.5pt);
 				 \coordinate [label=below right:{\scriptsize $B$}] (B) at ({+\t},0);
-				 \draw (B) circle (1.5pt)
+				 \draw (B) circle (1.5pt);
+				 \pause
+				 \coordinate (T') at ({-\td},{-\t},);
+				 \draw[gray, thin] (T') arc[start angle=-60, end angle=60, radius=1.5] node[right] {\scriptsize $m$};
+				 \pause
+				 \coordinate (T'') at ({\td},{-\t},);
+				 \draw[gray, thin] (T'') arc[start angle=240, end angle=120, radius=1.5] node[left] {\scriptsize $n$};
+				 \pause
+				 \coordinate [label=below right:{\scriptsize $C$}] (C) at (0,{-\t});
+				 \fill[blue] (C) circle (2pt);
+				 \pause
+				 \draw[red, very thick] (0,2) -- (0,-2) node[right] {$p$};
+
+
+
 		\end{tikzpicture}		 
 	\end{columns}	
 
@@ -183,20 +197,25 @@
 
 
 % Naloga 4
-% \begin{frame}{Graf funkcije s TikZ}
-% 	\centering
-% 	\begin{tikzpicture}
-% 		\begin{axis}[
-% 			axis lines = middle,
-% 			domain = 0:10,
-% 			width = 9cm,
-% 			height = 8cm,
-% 			xtick = {0, 1, 2, 3, 4, 5, 6, 7, 8},
-% 			ytick = {0, 1, 2, 3, 4, 5, 6},
-% 			ymin = -1,
-% 			ymax = 7,
-% 			grid = both
-% 		]
-% 		\end{axis}
-% 	\end{tikzpicture}
-% \end{frame}
+ \begin{frame}{Graf funkcije s TikZ}
+ 	\centering
+ 	\begin{tikzpicture}
+ 		\begin{axis}[
+ 			axis lines = middle,
+			xlabel = {$x$},
+			ylabel = {$y$},
+ 			domain = 0:10,
+ 			width = 9cm,
+ 			height = 8cm,
+ 			xtick = {0, 1, 2, 3, 4, 5, 6, 7, 8},
+ 			ytick = {0, 1, 2, 3, 4, 5, 6},
+ 			ymin = -1,
+ 			ymax = 7,
+ 			grid = both
+			]
+			 \addplot{2^(x - 3)/2^3 + 1};
+			 \addlegendentry{\(2^(x - 3)/2^3 + 1\)};
+
+ 		\end{axis}
+ 	\end{tikzpicture}
+ \end{frame}
