--- a/08-prosojnice/prosojnice/6-zaporedja-algebra-grupe.tex
+++ b/08-prosojnice/prosojnice/6-zaporedja-algebra-grupe.tex
@@ -1,7 +1,7 @@
 \begin{frame}{Zaporedja, vrste in limite}
 	\begin{enumerate}
 		\item 
-		Naj bo ?? absolutno konvergentna vrsta in $a_n \ne -1$.
+		Naj bo \(\sigma\) absolutno konvergentna vrsta in $a_n \ne -1$.
 		Dokaži, da je tudi vrsta $\sum_{n=1}^\infty \frac{a_n}{1+a_n}$
 		absolutno konvergentna.
 
